--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <li class="nav_item">
               <a href="#" class="nav_link">Me connecter</a>
             </li>
-            <button></button>
+            <button class="nav_button">S'inscrire</button>
           </ul>
         </nav>
       </div>
